# Learning_AI

./: .gitignore  DeepSeek_vs_MiMo_对比.md  README.md
Cpp_play/: .gitignore  hello.cpp
Cpp_play/MiniKV/: .gitignore  CMakeLists.txt  mingw-toolchain.cmake
Cpp_play/MiniKV/config/: default.json
Cpp_play/MiniKV/src/: app.cpp  app.h  compressor.cpp  compressor.h  database.cpp  database.h  main.cpp
Cpp_play/OpenGL_Anim/: CMakeLists.txt
Cpp_play/OpenGL_Anim/shaders/: scene.frag  scene.vert
Cpp_play/OpenGL_Anim/src/: camera.h  glad.c  glad.h  main.cpp  math_utils.h  mesh.cpp  mesh.h  shader.cpp  shader.h
Cpp_play/weather_cli/: CMakeLists.txt  README.md  main.cpp
Docx_play/: LLM-Models-Comparison-2026.md  Maxwell_Equations_Derivation.md  mimo-v2.5-pro.md  opencode-introduction.md
Matlab_play/: admittance_force_response.m  matlab_log.txt
Py_play/: hello.py
Py_play/hello/: calculator.ui  hello.py
Py_play/qingming_riverside/: qingming_riverside.py
Py_play/qtplay/: calculator.py
Py_play/snake_pyside6/: main.py  requirements.txt  启动游戏.bat
QT_play/HardwareMonitor/: CMakeLists.txt  HardwareMonitor.cpp  HardwareMonitor.h  MainWindow.cpp  MainWindow.h  main.cpp
QT_play/MusicPlayer/: CMakeLists.txt  MusicPlayer.pro  mainwindow.cpp  mainwindow.h
QT_play/QT_Firework/: CMakeLists.txt  FireworkWidget.cpp  FireworkWidget.h  main.cpp
QT_play/QT_Tetris/: CMakeLists.txt  TetrisGame.cpp  TetrisGame.h  main.cpp
QT_play/QtLearn/Qt_20260618/: CMakeLists.txt  main.cpp
QT_play/QtLearn/Qt_20260619/: CMakeLists.txt  MyWidget.cpp  MyWidget.h  MyWidget.ui  main.cpp
QT_play/QtLearn/Qt_20260619_python/: main.py
QT_play/SnakeGame/: CMakeLists.txt  SnakeGame.pro  gamewidget.cpp  gamewidget.h  main.cpp  mainwindow.cpp  mainwindow.h
QT_play/simple_qt/: CMakeLists.txt  main.cpp
SW_play/: check_result.txt  check_sw.bat  check_sw.vbs  create_gear.bat  create_gear.py  create_gear.vbs  gear_output.txt  run_gear.bat  run_test.bat  test_output.txt  test_sw.vbs  test_template.vbs
Web_play/: app.py  index.html  script.js  style.css
registry_backup_20260527_195139/: Directory_Background_ContextMenuHandlers.reg
tools/: generate_robot_battle.ps1
